--- a/AzureBeyondBasics/Views/Storage/Index.cshtml
+++ b/AzureBeyondBasics/Views/Storage/Index.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div> 
-        Created new customer @Model.RowKey
+        Created new customer and added to queue @Model.RowKey
     </div>
 </body>
 </html>
